raised z-index of modals to fix layering conflict with cycle

--- a/css/groundwork.css
+++ b/css/groundwork.css
@@ -4722,7 +4722,7 @@ ul.icons li [class*=" icon-"] {
 .modal-active div.modal.active {
   visibility: visible;
   opacity: 1;
-  z-index: 99;
+  z-index: 999;
 }
 
 #overlay {
@@ -4733,7 +4733,7 @@ ul.icons li [class*=" icon-"] {
   left: 0;
   bottom: 0;
   right: 0;
-  z-index: 98;
+  z-index: 998;
   width: 100%;
   height: 100%;
   -ms-box-shadow: inset 0 0 200px black;
@@ -4794,7 +4794,7 @@ div.modal .modal-content {
 }
 div.modal .close, div.modal .fullscreen {
   position: absolute;
-  z-index: 100;
+  z-index: 1000;
   font-size: 1.25em;
   top: 10px;
   right: 10px;
