--- a/src/scss/_modals.scss
+++ b/src/scss/_modals.scss
@@ -32,7 +32,7 @@
   div.modal.active {
     visibility:visible;
     opacity:1;
-    z-index:99;
+    z-index:999;
   }
 }
 
@@ -44,7 +44,7 @@
   left:0;
   bottom:0;
   right:0;
-  z-index:98;
+  z-index:998;
   width:100%;
   height:100%;
   @include inner-shadow(#000000, 200px, 0, 0);
@@ -81,7 +81,7 @@ div.modal {
   }
   .close, .fullscreen {
     position:absolute;
-    z-index:100;
+    z-index:1000;
     font-size:1.25em;
     top:10px;
     right:10px;
